--- a/Gallery/app/src/main/res/layout/pass_req.xml
+++ b/Gallery/app/src/main/res/layout/pass_req.xml
@@ -30,7 +30,18 @@
             android:drawableLeft="@drawable/ic_lock"
             android:hint="Password"
             android:inputType="textPassword"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             />
+        <Button
+            android:id="@+id/confirm_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:text="Confirm"
+            android:textSize="15sp"/>
     </LinearLayout>
 
 
