+Add security layout
-Create LoggedSecurityViewActivity
-Update pass_req (add Log In button)

--- a/Gallery/app/src/main/res/layout/pass_req.xml
+++ b/Gallery/app/src/main/res/layout/pass_req.xml
@@ -24,24 +24,20 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@color/white"
-            android:textColor="@color/white"
             android:textSize="20sp"
             android:ems="10"
             android:drawableLeft="@drawable/ic_lock"
             android:hint="Password"
             android:inputType="textPassword"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             />
+
         <Button
-            android:id="@+id/confirm_button"
+            android:id="@+id/logInButton"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Confirm"
-            android:textSize="15sp"/>
+            android:layout_height="wrap_content"
+            android:text="Log in"
+            android:onClick="onClick"/>
+
     </LinearLayout>
 
 
