--- a/Gallery/app/src/main/res/layout/security_section.xml
+++ b/Gallery/app/src/main/res/layout/security_section.xml
@@ -17,7 +17,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Security folder"
+            android:text="Security"
             android:textSize="30sp"
             android:textColor="@color/white"
             android:layout_marginLeft="10dp"
