--- a/Gallery/app/src/main/res/layout/pass_req.xml
+++ b/Gallery/app/src/main/res/layout/pass_req.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@color/white"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:ems="10"
             android:drawableLeft="@drawable/ic_lock"
