--- a/Gallery/app/src/main/res/layout/activity_main.xml
+++ b/Gallery/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/black"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -34,7 +34,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginRight="15dp"
             android:background="@drawable/custom_button"
             android:src="@drawable/ic_photo"/>
         <ImageButton
@@ -43,8 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginRight="15dp"
             android:background="@drawable/custom_button"
             android:src="@drawable/ic_video"/>
         <ImageButton
@@ -53,8 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginRight="15dp"
             android:background="@drawable/custom_button"
             android:src="@drawable/ic_location"/>
         <ImageButton
@@ -63,8 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginRight="15dp"
             android:background="@drawable/custom_button"
             android:src="@drawable/ic_favorite"/>
         <ImageButton
@@ -73,8 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/custom_button"
             android:src="@drawable/ic_lock"/>
 
