--- a/Gallery/app/src/main/res/layout/location_section.xml
+++ b/Gallery/app/src/main/res/layout/location_section.xml
@@ -1,209 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/black"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="245dp"
-        android:layout_weight="6"
-        android:orientation="vertical">
-
-
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Locations"
-            android:textSize="30sp"
             android:textColor="@color/white"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"/>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1"
-                android:padding="10dp">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Ho Chi Minh"
-                    android:textColor="@color/white"
-                    android:textSize="25dp"/>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="137dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/photo_1"></ImageView>
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/photo_2"></ImageView>
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/photo_3"></ImageView>
-                    </LinearLayout>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Da Nang"
-                    android:textColor="@color/white"
-                    android:textSize="25dp"/>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="137dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/photo_1"></ImageView>
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/photo_2"></ImageView>
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/photo_3"></ImageView>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Nha Trang"
-                    android:textColor="@color/white"
-                    android:textSize="25dp"/>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="137dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/photo_1"></ImageView>
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/photo_2"></ImageView>
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/photo_3"></ImageView>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="New York"
-                    android:textColor="@color/white"
-                    android:textSize="25dp"/>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="137dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/photo_1"></ImageView>
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/photo_2"></ImageView>
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/photo_3"></ImageView>
-                </LinearLayout>
-
-
-            </LinearLayout>
-        </ScrollView>
+            android:textSize="35dp"
+            android:padding="10dp"
+            android:text="Albums"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif"></TextView>
 
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="7dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_weight="1">
+        android:paddingBottom="5dp">
+        <ImageButton
+            android:id="@+id/photos_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/custom_button"
+            android:src="@drawable/ic_photo"/>
+        <ImageButton
+            android:id="@+id/videos_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/custom_button"
+            android:src="@drawable/ic_video"/>
+        <ImageButton
+            android:id="@+id/location_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/custom_button"
+            android:src="@drawable/ic_location"/>
+        <ImageButton
+            android:id="@+id/favorite_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/custom_button"
+            android:src="@drawable/ic_favorite"/>
+        <ImageButton
+            android:id="@+id/secure_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/custom_button"
+            android:src="@drawable/ic_lock"/>
 
-        <ImageButton
-            android:id="@+id/album_views"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/photos"
-            android:onClick="onClick"
-            ></ImageButton>
-        <ImageButton
-            android:id="@+id/video_views"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/videos"
-            android:onClick="onClick"
-            ></ImageButton>
-
-        <ImageButton
-            android:id="@+id/loc_views"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/locations"
-            android:onClick="onClick"
-            ></ImageButton>
-
-        <ImageButton
-            android:id="@+id/fav_views"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/farvorites"
-            android:layout_weight="1"
-            android:onClick="onClick"
-            ></ImageButton>
-        <ImageButton
-            android:id="@+id/sec_views"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/securities"
-            android:layout_weight="1"
-            android:onClick="onClick"
-            ></ImageButton>
     </LinearLayout>
+
+    <GridView
+        android:id="@+id/grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnWidth="90dp"
+        android:gravity="center"
+        android:horizontalSpacing="10dp"
+        android:numColumns="2"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="100dp"></GridView>
+
 
 </LinearLayout>
