--- a/Gallery/app/src/main/res/layout/video_section.xml
+++ b/Gallery/app/src/main/res/layout/video_section.xml
@@ -70,5 +70,20 @@
             android:src="@drawable/ic_lock"/>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recyclerview_gallery_videos"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
