--- a/Gallery/app/src/main/res/layout/video_item.xml
+++ b/Gallery/app/src/main/res/layout/video_item.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/iv_image"
-            android:scaleType="fitXY">
+            android:scaleType="centerCrop">
 
         </ImageView>
     </LinearLayout>
@@ -33,8 +33,8 @@
         ></RelativeLayout>
 
     <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:src="@drawable/ic_play"
         android:layout_centerInParent="true"></ImageView>
 </RelativeLayout>
