+Fix image rotation bug

--- a/Gallery/app/src/main/res/layout/gallery_item.xml
+++ b/Gallery/app/src/main/res/layout/gallery_item.xml
@@ -12,6 +12,7 @@
         android:contentDescription="Gallery image"
         app:layout_constraintDimensionRatio="1"
         android:id="@+id/image"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
