--- a/Gallery/app/src/main/res/menu/setting_img_view.xml
+++ b/Gallery/app/src/main/res/menu/setting_img_view.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/delete"
         android:title="Delete"/>
+    <item android:id="@+id/setWall"
+        android:title="Set as Wallpaper"/>
     <item android:id="@+id/details"
         android:title="Details"/>
 </menu>
