--- a/Gallery/app/src/main/res/menu/setting.xml
+++ b/Gallery/app/src/main/res/menu/setting.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/about"
-        android:title="About"/>
     <item android:id="@+id/create_album"
-        android:title="Create album"/>
+        android:title="@string/create_album"/>
     <item android:id="@+id/change_to_by_date"
-        android:title="View by date"/>
+        android:title="@string/view_by_date"/>
     <item android:id="@+id/setting"
-        android:title="Settings"/>
+        android:title="@string/settings"/>
 </menu>
