--- a/Gallery/app/src/main/res/menu/setting_video_view.xml
+++ b/Gallery/app/src/main/res/menu/setting_video_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/delete_vid"
-        android:title="Delete"/>
+        android:title="@string/delete_pic"/>
     <item android:id="@+id/details_vid"
-        android:title="Details"/>
+        android:title="@string/details"/>
 </menu>
