+Add copy image function
-With src: https://stackoverflow.com/questions/29713587/how-to-get-the-real-path-with-action-open-document-tree-intent
https://stackoverflow.com/questions/4178168/how-to-programmatically-move-copy-and-delete-files-and-directories-on-sd

--- a/Gallery/app/src/main/res/menu/setting_img_view.xml
+++ b/Gallery/app/src/main/res/menu/setting_img_view.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/delete"
         android:title="@string/delete_pic"/>
+    <item android:id="@+id/copy"
+        android:title="Copy"/>
     <item android:id="@+id/setWall"
         android:title="@string/set_as_wallpaper"/>
     <item android:id="@+id/details"
