--- a/Gallery/app/src/main/res/layout/activity_main.xml
+++ b/Gallery/app/src/main/res/layout/activity_main.xml
@@ -119,14 +119,14 @@
     <ImageButton
         android:id="@+id/btn_camera"
         android:layout_width="@dimen/_40sdp"
-        android:layout_height="@dimen/_40sdp"
+        android:layout_height="45dp"
         android:layout_gravity="bottom|right"
-        android:layout_marginBottom="70dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/background_camera_button"
         android:contentDescription="Camera"
         android:src="@drawable/ic_camera"
-        app:tint="@color/black"
-        android:background="@drawable/background_camera_button"
-        android:layout_marginRight="20dp"/>
+        app:tint="@color/black" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
