--- a/Gallery/app/src/main/res/layout/video_section.xml
+++ b/Gallery/app/src/main/res/layout/video_section.xml
@@ -116,6 +116,17 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <ImageButton
+        android:id="@+id/btn_record_video"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="45dp"
+        android:layout_gravity="bottom|right"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/background_camera_button"
+        android:contentDescription="Camera"
+        android:src="@drawable/ic_record_video"
+        app:tint="@color/black" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
