+Tag location and fix several issues appeared with it

--- a/Gallery/app/src/main/res/menu/setting_img_view.xml
+++ b/Gallery/app/src/main/res/menu/setting_img_view.xml
@@ -10,6 +10,8 @@
         android:title="Share"/>
     <item android:id="@+id/edit"
         android:title="Edit image"/>
+    <item android:id="@+id/tag"
+        android:title="Tag location"/>
     <item android:id="@+id/details"
         android:title="@string/details"/>
 </menu>
